Add(otp): Add otp handler service user servcie and user routere
